2008-06-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/info.c (long_option): New options
	--show-malformed-multibytes and --no-show-malformed-multibytes
	* info/man.c (find_man_formatter): If INFO_MAN_COMMAND is
	specified, use its value as man command.
	* info/window.c (show_malformed_multibyte_p): New variable.
	(process_node_text): Ignore malformed multibyte characters unless
	show_malformed_multibyte_p is set.
	* info/window.h (show_malformed_multibyte_p): New extern.

	* doc/info-stnd.texi (Invoking Info): Document new options.
	* NEWS: Likewise.

2008-06-18  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (usage): More comments.
	(version): exit 0.
	Reported by Karl Berry.

2008-06-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (version): New function, to replace...
	($version): this.
	(usage): Document --dvipdf.

2008-06-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Sort functions.

2008-06-16  Akim Demaille  <akim@epita.fr>

	texi2dvi: avoid "\n" in echos to please Bash 3.2.
	It is virtually impossible to find a safe means to use
	echo with \n in it.  So use cat and here docs.
	* util/texi2dvi ($usage): Remove, replaced by...
	(usage): this function.

2008-06-16  Akim Demaille  <demaille@gostai.com>

	Support -I dir1:dir2, as per the documentation.
	Reported by Vincent Ordy.
	* util/texi2dvi: (list_concat_dirs): New.
	Currently mostly a copy of absolute_filenames, but the latter
	is scheduled for removal.
	Use list_concat_dirs for -I support.
	(--I*): Remove, not documented anywhere, and too accepting.

2008-06-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* autogen.sh: Fix quotation typo.
	* gnulib/lib/configmake.h, gnulib/lib/stdbool_.h: Remove.

2008-06-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix length calculation for strings containing ANSI escapes.
	Bug reported by Benno Schulenberg.
	
	* info/man.c (clean_manpage): Remove.
	(get_manpage_contents): Remove the kludge introduced 2006-08-13.